# stash-curator

./: .editorconfig  .gitignore  AGENTS.md  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  pages.yml
curator/: __init__.py  __main__.py  api.py  cli.py  config.py  expand.py  interactions.py  profiling.py  similarity.py  whisparr.py
curator/events/: __init__.py  contracts.py  curves.py  historical.py  replacements.py  repository.py
curator/explanations/: __init__.py  catalog.py  planner.py  realizations.json  reasons.py  render.py
curator/features/: __init__.py  builder.py  measurements.py  profiles.py  store.py  tag_roles.py
curator/graphql/: __init__.py  adapters.py  client.py  operations.py
curator/model/: __init__.py  boundaries.py  builder.py  curves.py  store.py  updates.py
curator/ranking/: __init__.py  policy.py  slate.py
curator/reporting/: __init__.py  html.py
curator/storage/: __init__.py  database.py  migrations.py  models.py  retention.py
docs/: _config.yml  architecture.md  contributing.md  design.md  getting-started.md  handover.md  implementation.md  index.md  natural-language-explanations.md  privacy.md  prose-corpus-analysis.md  recommendations.md  tag-evidence.md  using-curator.md
plugin/: backend.py  stash-curator.css  stash-curator.js  stash-curator.yml
scripts/: build_plugin.py  latent_poc.py  stashdb_poc.py  verify
site/: index.html
tests/: __init__.py  test_api.py  test_cli.py  test_expand.py  test_interactions.py  test_profiling.py  test_stashdb_poc.py  test_whisparr.py
(+61 files in other folders)
