[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stash-curator"
version = "0.0.0"
description = "Navigate your Stash library, guided by your taste."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [{ name = "mrx-31415" }]
dependencies = []

[project.scripts]
curator = "curator.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.14",
  "pytest>=8.3",
  "ruff>=0.9",
]
poc = ["scikit-learn>=1.6"]

[tool.hatch.build.targets.wheel]
packages = ["curator"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
